$Id$

1.2.6
	Started adding code for newmsgproc.  It doesn't fully work yet!
	  Don't use it.
	Added search, '/' and '?' to basic help.
	Will attempt to keep the current message as close as possible
	     to the previous current message after an expunge.
	"set <variable>" and "unset <variable>" now work for boolean variables.
	
1.2.5
	Patch to fix memory bug in replying to CC messages
	If we're on Athena and have static krb (or other) libraries, use
	  them
	Added "athstatic" program to the release, which handles the above
	Cast to an int for isspace, to make gcc -Wall quiet
	Added 'zlist' and 'l' to basic help.
	
1.2.4
	'zlog in' will now take an optional thrid argument to set the
	     'tty' variable before setting the zlocation
	There is now a 'zlist' command that acts like 'znol -l'
	'l' is bound to 'zlist'
	Fixed memory leak uninitialzed memory read in fmtext
	viewwin will now say "End" instead of "More" when at the end
	Added a debugging message indicating the result of topmsg
	  calculations
	You can now use %me% in filters
	The built-in personal filter is updated to do so
	Fixed a bug in moving the pointer after an expunge
	Fixed up the normal scrolling code.  Now it should always
	  land on a message, but it's still not optimal.
	Added the variable 'smartstrip' which will strip kerberos
	  instances out for the 'reply' command.
	Added -R/usr/athena/lib to the build for Athena
	Started updating the intro document
	Small changes to help / about
	The 'subscribe' and 'unsubscribe' commands (and their aliases) now
	  update .zephyr.subs by default.  If either is given the '-t'
	  (for "temporary") option the .zephyr.subs will not be updated
	Turned off beeping for hitting the top or bottom of the list of
	  messages
	Made daemon.webzephyr a special case for smartstrip
	Added 'out' as a default filter for outgoing messages
	
1.2.3
	Added filters "ping", "auto" and "login" by default.
	Added "body" as a valid field to match on in a filter.